fix mobile layout bugs (in image in hero section, 90 is not exist in tailwind). add border box and overflow in global css

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,12 @@ html {
             0% 50%
     );
 }
+
+html, body {
+    overflow-x: hidden;
+}
+
+
+* {
+    box-sizing: border-box;
+}
